Bætti við í index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<%- include('header') -%>
-<h1>
+<!DOCTYPE html>
+    <%- include('header') -%>
+
+    <h1>
     Title
 </h1>
 <p>
     My page
 </p>
 <%- include('footer') -%>
+</html>
