teacher knows best
tók mikið frá kennaranum

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-    <%- include('header') -%>
-
-    <h1>
-    Title
-</h1>
-<p>
-    My page
-</p>
-<%- include('footer') -%>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Hópverkefni 2</title>
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Roboto+Mono:400,700" rel="stylesheet">
+  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="./dist/styles.css">
+</head>
+<body>
+  <header class="heading heading--main">
+    <span class="heading__category">Vefforritun</span>
+    <h1 class="heading__title">Fyrirlestrar</h1>
+  </header>
+  <main>
+    <ul class="filters">
+      <li><button data-category="html" class="filters__filter filters__filter--html">HTML</button></li>
+      <li><button data-category="css" class="filters__filter filters__filter--css">CSS</button></li>
+      <li><button data-category="javascript" class="filters__filter filters__filter--js">JavaScript</button></li>
+    </ul>
+    <div class="list">
+      <div class="list__row"> <!--Vantar einhverja virkni hér í ejs template-->
+      </div>
+    </div>
+  </main>
+</body>
 </html>
